[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "moss-memory"
version = "0.1.0"
description = "Neuroplastic memory retrieval: Hebbian recall, TReMu temporal reasoning, multi-channel RRF"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "rank_bm25>=0.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["moss*"]
