[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moss-memory"
version = "0.1.0"
description = "Neuroplastic AI memory system with Hebbian pathways, temporal reasoning, and multi-channel retrieval"
authors = [{name = "Lichen Research Inc.", email = "contact@lichenresearch.ai"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "rank-bm25>=0.2", "httpx>=0.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.setuptools.packages.find]
where = ["."]
include = ["moss*"]
